@@ -5,5 +5,4 @@
 #include <tidy/defines.h>
 #include <tidy/internals.h>
 #include <tidy/math.h>
-#include <tidy/shield.h>
 #include <tidy/protect.h>
